--- a/app/magister.css
+++ b/app/magister.css
@@ -1,5 +1,5 @@
 html {
-	background:#505D6E url(images/cuttingboard.jpg) no-repeat center center fixed;
+	background:#505D6E url(images/freshveggies.jpg) no-repeat center center fixed;
 	min-height:100%;
 	-webkit-background-size: cover;
 	   -moz-background-size: cover;
@@ -306,6 +306,7 @@ a:hover, a:active { color:#fff; text-decoration: underline; }
 }
 .theme-invert .btn {
 	color:rgba(255,255,255,.8);
+	font-weight: bold;
 }
 .theme-invert .btn:hover {
 	color:#fff;
@@ -333,11 +334,12 @@ a:hover, a:active { color:#fff; text-decoration: underline; }
 .theme-invert .title,
 .theme-invert .subtitle,
 .theme-invert .tagline { 
-	color:#222222; 
+	color:#f8f8ff;
+	font-weight: bold;
 }
 
 .theme-invert .btn-default {
-	background: rgba(0,0,0,.4);
+	background: rgba(40,80,90,.9);
 }
 .theme-invert .btn-default:hover,
 .theme-invert .btn-default:focus,
@@ -364,5 +366,86 @@ a:hover, a:active { color:#fff; text-decoration: underline; }
 	color: inherit;
 }
 
+.box {
+	width:60%;
+	float: inherit;
+	height: 40%;
+	position:fixed;
+	background:rgba(0,0,0,0.8);
+	transition:.4s;
+	-webkit-transition:.4s;
+}
+
+.box:hover {
+	background-size:105%;
+	transition:.4s;
+	-moz-transition:.4s;
+	-webkit-transition:.4s;
+}
+
+.box:before {
+	content:"";
+	display:block;
+	padding-top:100%;
+	z-index:1;
+}
+
+.content {
+	position:absolute;
+	top:0;
+	left:0;
+	right:0;
+	bottom:0;
+}
+
+.number {
+	font-family: 'Lato', sans-serif;
+	color:white;
+	padding-left:5%;
+	font-size:12px;
+	z-index:100;
+	width:50%;
+	float:left;
+	font-weight:100;
+}
 
 
+.source {
+	text-indent:-99999px;
+	float:left;
+	padding: 8% 0 25% 0;
+	text-align:center;
+	width:40%;
+	color:white;
+	font-family: 'Lato', sans-serif;
+	font-style:italic;
+	font-size:8pt;
+	text-decoration:none;
+	opacity:.7;
+}
+
+.boxtitle {
+	font-family: 'Montserrat', sans-serif;
+	text-transform:uppercase;
+	text-align:center;
+	letter-spacing:.5px;
+	color:white;
+	padding-top:30px;
+	padding-bottom:15%;
+	width:90%;
+	margin:0 auto;
+	font-size:88%;
+	z-index:100;
+	height:43%;
+}
+
+
+.recipe-card {
+    background-color: #ffffff;
+    border-radius: 5px;
+    padding: inherit;
+}
+
+.recipe-card img {
+    max-width: 100%;
+}
