--- a/app/magister.css
+++ b/app/magister.css
@@ -457,5 +457,5 @@ a:hover, a:active { color:#fff; text-decoration: underline; }
 	margin-top: 25%;
 }
 .cards {
-	font-family: 'Wire One', Helvetica, Arial, sans-serif;
+	font-family: 'Open Sans', sans-serif;
 }
