--- a/app/app.css
+++ b/app/app.css
@@ -48,3 +48,29 @@
 input:focus, textarea:focus {
   outline: none;
 }
+.panel-default > .panel-heading {
+  color: #ffffff;
+}
+.theme-invert a {
+color: white;
+}
+
+.recipeimg {
+  height: 100%;
+  width: 100%;
+}
+.btn-xs, .btn-group-xs > .btn {
+  padding: -1px 6px;
+  font-size: 12px;
+  line-height: 1.5;
+  border-radius: 3px;
+}
+
+.xsearch {
+  color: black;
+}
+
+.move-right {
+padding-left: 15px;
+}
+
